--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3,7 +3,7 @@
         "en":"Helmet",
         "fr":"Casque",
         "es":"Casco",
-        "ch":"",
+        "ch":"帽子",
         "kr":"",
         "ru":"Шлем",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Armor",
         "fr":"Armure",
         "es":"Armadura",
-        "ch":"",
+        "ch":"護甲",
         "kr":"",
         "ru":"Броня",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Gloves",
         "fr":"Gants",
         "es":"Guantes",
-        "ch":"",
+        "ch":"手套",
         "kr":"",
         "ru":"Руки",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Weapon",
         "fr":"Arme",
         "es":"Arma",
-        "ch":"",
+        "ch":"武器",
         "kr":"",
         "ru":"Оружие",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Boots",
         "fr":"Bottes",
         "es":"Botas",
-        "ch":"",
+        "ch":"鞋子",
         "kr":"",
         "ru":"Ноги",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Necklace",
         "fr":"Collier",
         "es":"Collar",
-        "ch":"",
+        "ch":"項鏈",
         "kr":"",
         "ru":"Шея",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Ring",
         "fr":"Anneau",
         "es":"Anillo",
-        "ch":"",
+        "ch":"戒指",
         "kr":"",
         "ru":"Кольцо",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Belt",
         "fr":"Ceinture",
         "es":"Cinturón",
-        "ch":"",
+        "ch":"腰帶",
         "kr":"",
         "ru":"Пояс",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Cape",
         "fr":"Cape",
         "es":"Capa",
-        "ch":"",
+        "ch":"披肩",
         "kr":"",
         "ru":"Плащ",
         "tr":"",
@@ -165,7 +165,7 @@
         "en":"Mount",
         "fr":"Monture",
         "es":"Montura",
-        "ch":"",
+        "ch":"坐騎",
         "kr":"",
         "ru":"Ездовой",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"Spirit",
         "fr":"Esprit",
         "es":"Espíritu",
-        "ch":"",
+        "ch":"精靈",
         "kr":"",
         "ru":"Дух",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Book",
         "fr":"Livre",
         "es":"Libro",
-        "ch":"",
+        "ch":"技能書",
         "kr":"",
         "ru":"Книга",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Spirit Book",
         "fr":"Livre d'esprit",
         "es":"Libro del espíritu",
-        "ch":"",
+        "ch":"精靈技能書",
         "kr":"",
         "ru":"Книга Духов",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"Potion",
         "fr":"Potion",
         "es":"Pocion",
-        "ch":"",
+        "ch":"藥劑",
         "kr":"",
         "ru":"Зелье",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Essence",
         "fr":"Essence",
         "es":"Esencia",
-        "ch":"",
+        "ch":"精華",
         "kr":"",
         "ru":"Эссенция",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Wings",
         "fr":"Ailes",
         "es":"Alas",
-        "ch":"",
+        "ch":"羽翼",
         "kr":"",
         "ru":"Крылья",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Hair",
         "fr":"Cheuveux",
         "es":"Cabello",
-        "ch":"",
+        "ch":"髮型",
         "kr":"",
         "ru":"Прическа",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"Quest",
         "fr":"Quête",
         "es":"Mision",
-        "ch":"",
+        "ch":"任務物品",
         "kr":"",
         "ru":"Квест",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"Misc",
         "fr":"Divers",
         "es":"Misc",
-        "ch":"",
+        "ch":"雜物",
         "kr":"",
         "ru":"Разное",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"Trial Blade",
         "fr":"Epee d'entrainement",
         "es":"Hoja de prueba",
-        "ch":"",
+        "ch":"試製長劍",
         "kr":"",
         "ru":"Тренировочный Меч",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Beginner's Sword",
         "fr":"Epee de débutant",
         "es":"Espada del principiante",
-        "ch":"",
+        "ch":"新手長劍",
         "kr":"",
         "ru":"Меч Новичка",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"Mithral Sword",
         "fr":"Epée Mithral",
         "es":"Espada Mithral",
-        "ch":"",
+        "ch":"魔法長劍",
         "kr":"",
         "ru":"Мифриловый Меч",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Valiant Sword",
         "fr":"Epée vaillante",
         "es":"Espada Valiante",
-        "ch":"",
+        "ch":"强力長劍",
         "kr":"",
         "ru":"Меч Доблести",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"Desert Blade",
         "fr":"Lame du désert",
         "es":"Desert Blade",
-        "ch":"",
+        "ch":"沙漠之刃",
         "kr":"",
         "ru":"Пустынный Меч",
         "tr":"",
