--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -3,7 +3,7 @@
         "en":"Gear Position",
         "fr":"Emplacement",
         "es":"Posición del equipo",
-        "ch":"",
+        "ch":"裝備位置",
         "kr":"",
         "ru":"Слот Экипировки",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Required Class",
         "fr":"Classe Requise",
         "es":"Clase requerida",
-        "ch":"",
+        "ch":"職業限制",
         "kr":"",
         "ru":"Требуемый Класс",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Required Gender",
         "fr":"Genre Requis",
         "es":"Sexo requiredo",
-        "ch":"",
+        "ch":"性別限制",
         "kr":"",
         "ru":"Требуемый Пол",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Required Lv",
         "fr":"Niveau Requis",
         "es":"Nivel requerido",
-        "ch":"",
+        "ch":"等級限制",
         "kr":"",
         "ru":"Требуемый уровень",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Mod Stats",
         "fr":"Mod Stats",
         "es":"Mod Stats",
-        "ch":"",
+        "ch":"改造數值",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"ENCH Stats",
         "fr":"AMELIO Stats",
         "es":"Encantos Estadísticas",
-        "ch":"",
+        "ch":"强化數值",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Passive",
         "fr":"Passif",
         "es":"Pasivo",
-        "ch":"",
+        "ch":"被動",
         "kr":"",
         "ru":"Пассивный",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"{0} sec cooldown",
         "fr":"{0} sec de recharge",
         "es":"{0} sec para Utilizar",
-        "ch":"",
+        "ch":"{0} 秒冷卻時間",
         "kr":"",
         "ru":"{0} сек перезарядка",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Instant",
         "fr":"Instantané",
         "es":"Instantánea",
-        "ch":"",
+        "ch":"瞬發",
         "kr":"",
         "ru":"Мгновенный",
         "tr":"",
@@ -165,7 +165,7 @@
         "en":"Set as Target",
         "fr":"Cibler",
         "es":"Fijar como objetivo",
-        "ch":"",
+        "ch":"選擇目標",
         "kr":"",
         "ru":"Нацелится",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"Whisper",
         "fr":"Chuchoter",
         "es":"Susurro",
-        "ch":"",
+        "ch":"密語",
         "kr":"",
         "ru":"Шепотом",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Copy name",
         "fr":"Copier le nom",
         "es":"Copia Nombre",
-        "ch":"",
+        "ch":"複製姓名",
         "kr":"",
         "ru":"Копировать Имя",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Invite Group",
         "fr":"Inviter Groupe",
         "es":"Grupo de Invitación",
-        "ch":"",
+        "ch":"邀請組隊",
         "kr":"",
         "ru":"Пригласить в группу",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"Set new leader",
         "fr":"Changer leader",
         "es":"Establecer un nuevo líder",
-        "ch":"",
+        "ch":"設爲隊長",
         "kr":"",
         "ru":"Сменить лидера",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Expel from group",
         "fr":"Expulser du groupe",
         "es":"Expulsar del grupo",
-        "ch":"",
+        "ch":"踢出隊伍",
         "kr":"",
         "ru":"Исключить из группы",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Leave group",
         "fr":"Partir du groupe",
         "es":"Deje el grupo",
-        "ch":"",
+        "ch":"離開隊伍",
         "kr":"",
         "ru":"Покинуть Группу",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Disband group",
         "fr":"Disoudre le groupe",
         "es":"Disolver el grupo",
-        "ch":"",
+        "ch":"解散隊伍",
         "kr":"",
         "ru":"Распустить группу",
         "tr":"",
