--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -3,7 +3,7 @@
         "en":"Fire Bolt",
         "fr":"Boule de feu",
         "es":"",
-        "ch":"",
+        "ch":"火球術",
         "kr":"",
         "ru":"Огненная стрела",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Strikes a single target with a fire bolt, dealing massive damage.",
         "fr":"Frappe une seule cible avec une boule de feu et inflige des dégâts massifs.",
         "es":"",
-        "ch":"",
+        "ch":"對單一目標釋放一個火球，造成大量傷害.",
         "kr":"",
         "ru":"Огненная стрела поражает одиночную цель, нанося огромный урон.",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Inflicts {0}% damage and additional {1} skill damage.",
         "fr":"Inflige {0}% de dégâts et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит {0}% урона и дополнительные {1} урона от навыка",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Magic Bolt",
         "fr":"Missile Magique",
         "es":"",
-        "ch":"",
+        "ch":"奧術飛彈",
         "kr":"",
         "ru":"Магическая стрела",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Launches multiple bolts at the target, dealing magic damage.",
         "fr":"Lance plusieurs missiles magiques à la cible, causant des dégâts magiques.",
         "es":"",
-        "ch":"",
+        "ch":"對目標發射多個奧術飛彈，造成魔法傷害.",
         "kr":"",
         "ru":"Выпускает несколько стрел в цель, наносит магический урон.",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Launch 3 bolts to deal {0}% more damage and aditional {1} skill damage.",
         "fr":"Lance 3 missiles infligeant {0}% de dégâts plus {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"發射3枚飛彈造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Выпускает 3 стрелы нанося на {0}% больше урона и дополнительно {1} урона от навыка",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Energy",
         "fr":"Énergie Magique",
         "es":"",
-        "ch":"",
+        "ch":"活力",
         "kr":"",
         "ru":"Энергия",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Increases mage's max MP.",
         "fr":"Augmente les PM max du mage.",
         "es":"",
-        "ch":"",
+        "ch":"增加魔法師的最大魔力值上限",
         "kr":"",
         "ru":"Увеличивает максимальное значение MP мага",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Increases base MP by {0}%",
         "fr":"Augmente les PM de {0}%",
         "es":"",
-        "ch":"",
+        "ch":"增加基礎魔力值 {0}%",
         "kr":"",
         "ru":"Увеличивает базовое значение MP на {0}%",
         "tr":"",
