--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -165,7 +165,7 @@
         "en":"Meteor Drop",
         "fr":"Lapidation",
         "es":"",
-        "ch":"",
+        "ch":"隕石術",
         "kr":"",
         "ru":"Падение метеорита",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"Deals AOE by manipulating destructive meteors",
         "fr":"Créer un AOE en manipulant des météores destructeurs.",
         "es":"",
-        "ch":"",
+        "ch":"大量毀滅性的隕石從天而降並造成範圍傷害",
         "kr":"",
         "ru":"Наносит урон по области от управляемых разрушительных метеоритов.",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Each stacked attack deals {0}% Damage",
         "fr":"Chaques attaques infligent {0}% de dégâts.",
         "es":"",
-        "ch":"",
+        "ch":"每層堆叠攻擊可以造成 {0}% 的傷害",
         "kr":"",
         "ru":"Каждая волна атак наносит {0}% урона",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Awaken",
         "fr":"Réveil",
         "es":"",
-        "ch":"",
+        "ch":"喚醒",
         "kr":"",
         "ru":"Пробуждение",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"Recovers MP Swiftly",
         "fr":"Récupère rapidement des PM.",
         "es":"",
-        "ch":"",
+        "ch":"立刻恢復角色的魔力值",
         "kr":"",
         "ru":"Быстрое восстановление MP",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Recover MP by {0}",
         "fr":"Récupère {0} PM.",
         "es":"",
-        "ch":"",
+        "ch":"恢復 {0} 的魔力值",
         "kr":"",
         "ru":"Восстанавливает {0} MP",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Thunder",
         "fr":"Éclair",
         "es":"",
-        "ch":"",
+        "ch":"落雷術",
         "kr":"",
         "ru":"Гроза",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Strikes a single target heavily with thunder...",
         "fr":"Fais s'abbatre sur une cible unique un éclair foudroyant.",
         "es":"",
-        "ch":"",
+        "ch":"對單一目標釋放雷霆造成傷害.",
         "kr":"",
         "ru":"Сильная гроза поражает одиночную цель",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage.",
         "fr":"Inflige {0}% dégâts et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и добавляет {1} урона от навыка.",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"Fire Wall",
         "fr":"Mur de Feu",
         "es":"",
-        "ch":"",
+        "ch":"火墻術",
         "kr":"",
         "ru":"Огненная стена",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"Harms and slows down enemies in the area of effect by conjuring flames.",
         "fr":"Blesse et ralentit les ennemis dans la zone d'effet en invoquant des flammes.",
         "es":"",
-        "ch":"",
+        "ch":"施放一面火墻，對技能範圍内的敵人造成傷害並減速.",
         "kr":"",
         "ru":"Наносит урон и замедляет противников в области дейстия магического пламени",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Deals {0}% damage and an additional {1} Skill damage each second. Lasts 15 sec.",
         "fr":"Inflige {0}% de dégâts et {1} dégâts additionnels par seconde. Dure 15 secondes.",
         "es":"",
-        "ch":"",
+        "ch":"每秒造成 {0}% 的傷害以及額外 {1} 的技能傷害. 持續15秒.",
         "kr":"",
         "ru":"Наносит {0}% урона и добавляет {1} урона от навыка каждую секунду. Действует 15 секунд.",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"Freeze",
         "fr":"Gel",
         "es":"",
-        "ch":"",
+        "ch":"霜凍術",
         "kr":"",
         "ru":"Заморозка",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Freezes the target. Target is unfrozen when it takes damage.",
         "fr":"Gel la cible. La cible se dégèle quand elle prend des dégâts.",
         "es":"",
-        "ch":"",
+        "ch":"凍結目標.目標在受到攻擊時會解除冰凍狀態.",
         "kr":"",
         "ru":"Замораживает цель. Цель будет разморожена когда получит урон.",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"Deals {0}% damage and freezes the target for {1} seconds.",
         "fr":"Inflige {0}% de dégâts et gèle la cible pendant {1} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 的傷害並凍結目標 {1} 秒.",
         "kr":"",
         "ru":"Наносит {0}% урона и замораживает цель на {1} секунду.",
         "tr":"",
@@ -435,7 +435,7 @@
         "en":"Magic Mastery",
         "fr":"Contrôle Magique",
         "es":"",
-        "ch":"",
+        "ch":"魔力支配",
         "kr":"",
         "ru":"Магическое мастерство",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Increases Magic Crit Chance and Crit damage.",
         "fr":"Augmente la chance et les dégâts des coups critiques.",
         "es":"",
-        "ch":"",
+        "ch":"增加魔法暴擊率和暴擊傷害.",
         "kr":"",
         "ru":"Увеличивает шанс критической атаки и критический урон от магических атак",
         "tr":"",
@@ -471,7 +471,7 @@
         "en":"Increases skill Crit Chance by {0}%. Also increases Skill Crit damage by {1}%.",
         "fr":"Augmente les chances de causer des dégâts de compétences critiques de {0}%. Augmente aussi les dégâts de compétences critique de {1}%.",
         "es":"",
-        "ch":"",
+        "ch":"增加技能暴擊率 {0}% 並增加技能暴擊傷害 {1}%.",
         "kr":"",
         "ru":"Увеличивает шанс критической атаки от навыков на {0}%. Так же увеличивает критический урон от навыков на {1}%",
         "tr":"",
@@ -489,7 +489,7 @@
         "en":"Magic Shield",
         "fr":"Bouclier Magique",
         "es":"",
-        "ch":"",
+        "ch":"魔力護盾",
         "kr":"",
         "ru":"Магический щит",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Creates a magic shield to absorb incoming damage.",
         "fr":"Créer un bouclier magique qui absorbe les dégâts.",
         "es":"",
-        "ch":"",
+        "ch":"製造一面能夠吸收傷害的魔力護盾.",
         "kr":"",
         "ru":"Создаёт магический щит, который впитывает получаемый урон.",
         "tr":"",
@@ -525,7 +525,7 @@
         "en":"Magic shield absorbs {0} incoming damage. Lasts up to 20 sec.",
         "fr":"Le bouclier magique absorbe {0} dégâts. Il dure pendant 20 secondes.",
         "es":"",
-        "ch":"",
+        "ch":"魔力護盾可以吸收 {0} 的傷害. 持續20秒.",
         "kr":"",
         "ru":"Магический щит впитывает {0} получаемого урона. Действует 20 секунд.",
         "tr":"",
@@ -543,7 +543,7 @@
         "en":"Silence Curse",
         "fr":"Silence",
         "es":"",
-        "ch":"",
+        "ch":"沉默",
         "kr":"",
         "ru":"Проклятие Тишины",
         "tr":"",
@@ -561,7 +561,7 @@
         "en":"Attacks the target, disabling it from using skills.",
         "fr":"Attaque la cible, l’empêchant d'utiliser des compétences.",
         "es":"",
-        "ch":"",
+        "ch":"攻擊目標並使其無法使用技能.",
         "kr":"",
         "ru":"Проклинает цель, запрещает ей использовать навыки.",
         "tr":"",
@@ -579,7 +579,7 @@
         "en":"Inflicting {0}% more damage and an additional {1} Skill damage. Lasts {2} sec.",
         "fr":"Inflige {0}% de dégâts et {1} dégâts de compétences additionnels. Dure {2} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害. 持續 {2} 秒.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополонительно {1} урона от навыка. действует 2 секунды.",
         "tr":"",
@@ -597,7 +597,7 @@
         "en":"Frost Breath",
         "fr":"Souffle Glacé",
         "es":"",
-        "ch":"",
+        "ch":"霜凍吐息",
         "kr":"",
         "ru":"Дыхание холода",
         "tr":"",
@@ -615,7 +615,7 @@
         "en":"Causes massive damage to all enemies in the area of effect. Deals additional damage to frozen targets.",
         "fr":"Inflige des dégâts massifs à tous les ennemis dans la zone d'effet. Inglige des dégâts additionnels aux cibles gelés.",
         "es":"",
-        "ch":"",
+        "ch":"對技能範圍内的所有敵人造成大量傷害.對被凍結的目標造成額外的傷害.",
         "kr":"",
         "ru":"Наносит большой урон всем врагам в области действия. Наносит дополнительный урон замароженным врагам.",
         "tr":"",
@@ -633,7 +633,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage.",
         "fr":"Inflige {0}% dégâts et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительно {1} урона от навыка.",
         "tr":"",
