--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -651,7 +651,7 @@
         "en":"Triple Shot",
         "fr":"Coup Triple",
         "es":"",
-        "ch":"",
+        "ch":"三連射",
         "kr":"",
         "ru":"Тройной выстрел",
         "tr":"",
@@ -669,7 +669,7 @@
         "en":"Shoots at a single target to deal serious damage.",
         "fr":"Inflige d'importants dégâts à une cible unique.",
         "es":"",
-        "ch":"",
+        "ch":"對單一目標快速射擊三次並造成嚴重傷害.",
         "kr":"",
         "ru":"Стреляет в  одиночную цель нанося серьёзный урон.",
         "tr":"",
@@ -687,7 +687,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage.",
         "fr":"Inflige {0}% dégâts et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительно {1} урона от навыка.",
         "tr":"",
@@ -705,7 +705,7 @@
         "en":"Poison Arrow",
         "fr":"Flèche empoisonnée",
         "es":"",
-        "ch":"",
+        "ch":"毒箭",
         "kr":"",
         "ru":"",
         "tr":"Отравленная стрела",
@@ -723,7 +723,7 @@
         "en":"Poisons the target and slows it down.",
         "fr":"Empoisonne la cible et la ralenti.",
         "es":"",
-        "ch":"",
+        "ch":"使目標中毒並減速.",
         "kr":"",
         "ru":"Отравляет и замедляет цель.",
         "tr":"",
@@ -741,7 +741,7 @@
         "en":"Lowers target's SPD by {0}%. Target takes {1}% more damage and an additional {2} Skill damage over 4 sec.",
         "fr":"Ralenti la vitesse de la cible de {0}%. Inflige {1}% de dégâts et {1} dégâts de compétences additionnels pendant 4 secondes.",
         "es":"",
-        "ch":"",
+        "ch":"降低目標移動速度 {0}%. 在4秒内目標受到 {1}% 以上的傷害以及額外 {2} 的技能傷害.",
         "kr":"",
         "ru":"Снижает скорость цели на {0}%. Цель получает на {1}% больше урона и дополнительно {2} урона от навыка за 4 секунды.",
         "tr":"",
@@ -759,7 +759,7 @@
         "en":"Eagle Eye",
         "fr":"Oeil de Faucon",
         "es":"",
-        "ch":"",
+        "ch":"鷹眼",
         "kr":"",
         "ru":"Орлиный глаз",
         "tr":"",
@@ -777,7 +777,7 @@
         "en":"Provides the Ranger with an Attack Increase to distant targets.",
         "fr":"Permet à l'Archer d'occasionner plus de dégâts aux cibles éloignées.",
         "es":"",
-        "ch":"",
+        "ch":"增加游俠對遠距離目標的傷害.",
         "kr":"",
         "ru":"Позволяет Рейнджеру наносить усиленную атаку дальним целям.",
         "tr":"",
@@ -795,7 +795,7 @@
         "en":"Common attacks deal {0}% Enhanced Damage to targets more than 8 yrds from you.",
         "fr":"Les attaques normales infligent {0}% de dégâts supplémentaires aux cibles à plus de 8 mètres.",
         "es":"",
-        "ch":"",
+        "ch":"普通攻擊對8米以外的目標造成 {0}% 的增强傷害.",
         "kr":"",
         "ru":"Обычная атака наносит на {0}% увеличенный урон целям находящимся на расстоянии более 8 ярдов от вас.",
         "tr":"",
@@ -813,7 +813,7 @@
         "en":"Charged Shot",
         "fr":"Tir Chargé",
         "es":"",
-        "ch":"",
+        "ch":"蓄力箭",
         "kr":"",
         "ru":"Заряженный Выстрел",
         "tr":"",
@@ -831,7 +831,7 @@
         "en":"Strikes the enemy with charged arrows.",
         "fr":"Frappe la cible avec une flèche chargée.",
         "es":"",
-        "ch":"",
+        "ch":"對目標發射經過蓄力的箭矢.",
         "kr":"",
         "ru":"Атакует врага заряженной стрелой.",
         "tr":"",
@@ -849,7 +849,7 @@
         "en":"Each stacked attack deals {0}% damage.",
         "fr":"Chaque flèche chargée augmente les dégâts de {0}%.",
         "es":"",
-        "ch":"",
+        "ch":"每一層蓄力攻擊造成 {0}% 的傷害.",
         "kr":"",
         "ru":"Каждый выстрел навыка наносит {0}% урона.",
         "tr":"",
@@ -867,7 +867,7 @@
         "en":"Haste",
         "fr":"Hâte",
         "es":"",
-        "ch":"",
+        "ch":"迅捷",
         "kr":"",
         "ru":"Спешка",
         "tr":"",
@@ -885,7 +885,7 @@
         "en":"Increases Ranger's Movement Speed.",
         "fr":"Augmente la vitesse de déplacement de l'Archer.",
         "es":"",
-        "ch":"",
+        "ch":"增加游俠的移動速度.",
         "kr":"",
         "ru":"Увеличивает скорость передвижения Рейнджера",
         "tr":"",
@@ -903,7 +903,7 @@
         "en":"Lasts {0} sec. Increases SPD by {1}.",
         "fr":"Pendant {0} secondes. Augmente la VIT de {1}.",
         "es":"",
-        "ch":"",
+        "ch":"持續 {0} 秒. 增加 {1} 的移動速度.",
         "kr":"",
         "ru":"В течении {0} секунд, увеличивает SPD на {1}.",
         "tr":"",
@@ -921,7 +921,7 @@
         "en":"Multi-Arrow",
         "fr":"Flèche Multiple",
         "es":"",
-        "ch":"",
+        "ch":"多重箭",
         "kr":"",
         "ru":"Мульти-Выстрел",
         "tr":"",
@@ -939,7 +939,7 @@
         "en":"Shoots multiple arrows to attack all enemies in a certain range.",
         "fr":"Tire plusieurs flèches, attaquant les ennemis à une certaine portée.",
         "es":"",
-        "ch":"",
+        "ch":"對指定範圍内的所有敵人發射箭矢並造成傷害.",
         "kr":"",
         "ru":"Стреляет множеством стрел, атакуя всех врагов в определённой области.",
         "tr":"",
@@ -957,7 +957,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage.",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительно {1}  урона от навыка.",
         "tr":"",
@@ -975,7 +975,7 @@
         "en":"Crack Shot",
         "fr":"Coup de feu",
         "es":"",
-        "ch":"",
+        "ch":"爆裂射擊",
         "kr":"",
         "ru":"Меткий Выстрел",
         "tr":"",
@@ -993,7 +993,7 @@
         "en":"Increases Ranger's Attack Speed for a short period of time, during which the Ranger cannot move.",
         "fr":"Augmente la vitesse d'attaque de l'Archer pendant une courte période. Période durant laquelle l'Archer ne peut pas bouger.",
         "es":"",
-        "ch":"",
+        "ch":"短時間内增加游俠的攻擊速度，但游俠在此期間無法移動.",
         "kr":"",
         "ru":"Увеличивает скорость атаки Рейнджера на короткий промежуток времени, в это время рейнджер не может двигаться.",
         "tr":"",
@@ -1011,7 +1011,7 @@
         "en":"Lasts {0} sec. Increases ATK SPD by {1}. Effect disappears after {2} attacks.",
         "fr":"Pendant {0} secondes. Augmente la VIT d'ATQ de {1}. L'effet se dissipe après {2} attaques.",
         "es":"",
-        "ch":"",
+        "ch":"持續 {0} 秒. 增加攻擊速度 {1}. 效果在經過 {2} 次攻擊后消失.",
         "kr":"",
         "ru":"Длится {0} секунд. Увеличивает АТК СПД на {1}. Эффект исчезает после {2} атак",
         "tr":"",
@@ -1029,7 +1029,7 @@
         "en":"Evasion",
         "fr":"Esquive",
         "es":"",
-        "ch":"",
+        "ch":"回避",
         "kr":"",
         "ru":"Уклонение",
         "tr":"",
@@ -1047,7 +1047,7 @@
         "en":"Enhances Ranger's evasive maneuvers.",
         "fr":"Améliore l'évasion de l'Archer.",
         "es":"",
-        "ch":"",
+        "ch":"增强游俠的閃避能力.",
         "kr":"",
         "ru":"Повышеает Уклонение Рейджера.",
         "tr":"",
@@ -1065,7 +1065,7 @@
         "en":"Increases Evasion and Skill Evasion by {0}%. Lasts 6 sec.",
         "fr":"Augmente l'Evasion et l'Evasion des compétences de {0}%. Dure 6 secondes.",
         "es":"",
-        "ch":"",
+        "ch":"增强閃避和技能閃避 {0}%. 持續6秒.",
         "kr":"",
         "ru":"Повышает Уклонение и Уклониение от навыков на {0}%. Действует 6 секунд.",
         "tr":"",
@@ -1083,7 +1083,7 @@
         "en":"Precision",
         "fr":"Précision",
         "es":"",
-        "ch":"",
+        "ch":"精準",
         "kr":"",
         "ru":"Точность",
         "tr":"",
@@ -1101,7 +1101,7 @@
         "en":"Increases Ranger's Crit Chance and Attack Range. Passive.",
         "fr":"Augmente les chances de critique et la portée d'attaque de l'Archer. Passif.",
         "es":"",
-        "ch":"",
+        "ch":"增加游俠的暴擊率和攻擊射程. 被動.",
         "kr":"",
         "ru":"Увеличивает шанс крита Рейнджера и дальность атаки. Пассивный",
         "tr":"",
@@ -1119,7 +1119,7 @@
         "en":"Increases Crit Chance by {0}%. Increases Attack Range by {1} yrds.",
         "fr":"Augmente les chances de critique de {0}%. Augmente la portée d'attaque de {1} mètres.",
         "es":"",
-        "ch":"",
+        "ch":"增加暴擊率 {0}%. 增加攻擊射程 {1} 米.",
         "kr":"",
         "ru":"Увеличивает шанс критического удара на {0}%. Увеличивает дальность атаки на {1} ярдов.",
         "tr":"",
@@ -1137,7 +1137,7 @@
         "en":"Paralyze Trap",
         "fr":"Piège Paralysant",
         "es":"",
-        "ch":"",
+        "ch":"麻痹陷阱",
         "kr":"",
         "ru":"Парализующая Ловушка",
         "tr":"",
@@ -1155,7 +1155,7 @@
         "en":"Confines the enemy to a trap.",
         "fr":"Confine l'ennemi au même endroit.",
         "es":"",
-        "ch":"",
+        "ch":"把敵人控制在陷阱中.",
         "kr":"",
         "ru":"Удерживает врага на одном месте.",
         "tr":"",
@@ -1173,7 +1173,7 @@
         "en":"Trap lasts 15 sec. Paralyzes the target for {0} sec.",
         "fr":"Le piège dure 15 secondes. Paralyse la cible pendant {0} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"陷阱持續15秒. 麻痹目標 {0} 秒.",
         "kr":"",
         "ru":"Время жизни ловушки 15 секунд. Парализует цель на {0} секунд.",
         "tr":"",
@@ -1191,7 +1191,7 @@
         "en":"Homing Arrow",
         "fr":"Flèches Guidées",
         "es":"",
-        "ch":"",
+        "ch":"導航箭",
         "kr":"",
         "ru":"Самонаводящаяся Стрела",
         "tr":"",
@@ -1209,7 +1209,7 @@
         "en":"Instantly shoots multiple homing arrows at a single target, dealing a large amount of damage.",
         "fr":"Tire instantanément plusieurs flèches guidées sur une seule cible, infligeant d'importants dégâts.",
         "es":"",
-        "ch":"",
+        "ch":"瞬間對單一目標發射多枚導航箭，造成大量傷害.",
         "kr":"",
         "ru":"Мгновенно стреляет несколькими самонаводящимися стрелами по одной цели, нанося большое количество урона.",
         "tr":"",
@@ -1227,7 +1227,7 @@
         "en":"Inflicts {0}% more DMG and an additional {1} Skill DMG.",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше DMG и дополнительный {1} урон от навыка",
         "tr":"",
@@ -1245,7 +1245,7 @@
         "en":"Impact Shot",
         "fr":"Tir de Recul",
         "es":"",
-        "ch":"",
+        "ch":"衝擊箭",
         "kr":"",
         "ru":"Отталкивающий Выстрел",
         "tr":"",
@@ -1263,7 +1263,7 @@
         "en":"Knocks the target back with powerful shots. Has a better chance to Paralyze the target for 3 seconds as skill levels.",
         "fr":"Repousse la cible avec des tirs puissants. Peut paralyser la cible pendant 3 secondes, à mesure que le niveau de compétence augmente, le risque de paralysie augmente.",
         "es":"",
-        "ch":"",
+        "ch":"用强力的箭矢擊退目標. 技能等級提升后將有更高的機率麻痹目標3秒.",
         "kr":"",
         "ru":"Отбрасывает цель назад мощными выстрелами. Может парализовать цель на 3 секунды, по мере повышения уровня мастерства шанс паралича увеличивается.",
         "tr":"",
@@ -1281,7 +1281,7 @@
         "en":"Deals {0} Skill DMG. Knock-back distance: {1}.",
         "fr":"Inflige {0} dégâts de compétence. Distance de recul: {1}.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0} 的技能傷害. 目標擊退距離: {1}.",
         "kr":"",
         "ru":"Наносит {0} урона от навыка. Расстояние отбрасывания: {1}",
         "tr":"",
@@ -1299,7 +1299,7 @@
         "en":"Slam",
         "fr":"Coup Puissant",
         "es":"",
-        "ch":"",
+        "ch":"猛擊",
         "kr":"",
         "ru":"Хлопок",
         "tr":"",
